# aha-cli

./: Cargo.toml  PLAN.md  README.md
.claude/: settings.json
.claude/skills/api-guardrails/: SKILL.md
.claude/skills/review-aha-ticket/: SKILL.md
.claude/skills/rust-check/: SKILL.md
.github/workflows/: ci.yml
docs/: recipes.md
docs/implementation-plans/: oauth-login.md  v0.1-read-only.md  write-commands.md
examples/: probe_attachment.rs  probe_task_status.rs
scripts/: verify-release.sh
src/: cli.rs  lib.rs  main.rs
src/auth/: mod.rs  netrc.rs
src/client/: mod.rs  models.rs  resources.rs  retry.rs
src/cmd/: attachments.rs  backlog.rs  epics.rs  features.rs  ideas.rs  mod.rs  products.rs  releases.rs  requirements.rs  todos.rs  write.rs
src/output/: mod.rs
tests/: cli_smoke.rs  cmd_attachments.rs  cmd_auth.rs  cmd_backlog.rs  cmd_features.rs  cmd_products.rs  cmd_todos.rs  cmd_write.rs
