[package]
name = "aha-cli"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
description = "Command-line client for the Aha! API (ThoroughCare)"
publish = false

[[bin]]
name = "aha"
path = "src/main.rs"

[lib]
name = "aha_cli"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
futures = "0.3"
owo-colors = "4"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tabled = "0.16"
tempfile = "3"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "fs", "io-util", "io-std"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"

[dev-dependencies]
assert_cmd = "2"
insta = { version = "1", features = ["yaml"] }
predicates = "3"
tempfile = "3"
wiremock = "0.6"
